@@ -1,3 +1,4 @@
+11/2/2011 If sim sharing is on, show a menu for isolating and identifying sessions, see #3145
 11/2/2011 Report on student usage for menus and menu items, see #3144
 11/2/2011 Added flush commands and factored out IP address, see #3136
 11/2/2011 Switched to use writeUTF instead of writeObject, see #3136
